text alignment fixed

--- a/components/meetups/MeetupDetail.module.css
+++ b/components/meetups/MeetupDetail.module.css
@@ -1,5 +1,5 @@
 .detail {
-  text-align: center;
+  text-align: left;
 }
 
 .detail img {
